# hadoop-plus

./: .gitignore  BUILD.txt  README.md  README.txt  changelog.txt  pom.xml
KNN_combine/: pom.xml
KNN_combine/src/main/java/cn/ac/ict/htc/knn/: IDDistanceV.java  KNNCombiner.java  KNNDriver.java  KNNMapper.java  KNNReducer.java  KNN_arrayMapper.java
KNN_combine/src/main/native/: CMakeLists.txt
KNN_combine/src/main/native/cuda/: CMakeLists.txt  knn.h  knn_cuda_with_indexes.cu  knn_cuda_with_indexes.cubak  knn_toolkit.cpp
KNN_combine/src/main/native/omp/: BuildHeap.cpp  CMakeLists.txt  knn.cpp  knn.cpp_bak  knn.cpp_io  knn.h  mklcompile.sh
frame/: pom.xml
frame/src/main/java/cn/ac/ict/htc/job/: AbstractJob.java
frame/src/main/java/cn/ac/ict/htc/mapreduce/: ICTMapper.java
frame/src/main/java/cn/ac/ict/htc/recordsinput/: LineRecordReader.java  ManyLineInputFormat.java  ManyLineRecordReader.java  TestManyLineInputFormat.java  TestManyLineRecordReader.java
frame/src/main/java/cn/ac/ict/htc/tools/: Element.java  (+7 more)
frame/src/main/native/: CMakeLists.txt  cn_ac_ict_htc_utils_NativeUtils.cpp  cn_ac_ict_htc_utils_NativeUtils.cpp.bak  cn_ac_ict_htc_utils_NativeUtils.h  compileAndcpToDst.sh  compileframe.sh  compiletool.sh  dataTransfer.cpp  dataTransfer.h  generate_jni_header_file.sh  jni_frame.h  jni_user.h
hadoop-assemblies/: .project
hadoop-client/: .project
hadoop-common-project/: .project
hadoop-common-project/hadoop-annotations/: .project
hadoop-common-project/hadoop-auth/: .project  pom.xml
hadoop-common-project/hadoop-auth-examples/: .project
hadoop-common-project/hadoop-common/: .project
hadoop-common-project/hadoop-nfs/: .project
hadoop-dist/: .project
hadoop-hdfs-project/: .project
hadoop-hdfs-project/hadoop-hdfs/: flag
hadoop-hdfs-project/hadoop-hdfs-httpfs/: .project
hadoop-hdfs-project/hadoop-hdfs-nfs/: .project
hadoop-hdfs-project/hadoop-hdfs/src/contrib/bkjournal/: .project
hadoop-mapreduce-project/: .project
hadoop-mapreduce-project/hadoop-mapreduce-client/: .project
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-app/: .project
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-common/: .project
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-core/: .project
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-hs/: .project
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-hs-plugins/: .project
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-jobclient/: .project
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-shuffle/: .project
hadoop-mapreduce-project/hadoop-mapreduce-examples/: .project
hadoop-maven-plugins/: .project
hadoop-minicluster/: .project
hadoop-project/: .project
hadoop-project-dist/: .project
hadoop-tools/: .project
hadoop-tools/hadoop-archives/: .project
hadoop-tools/hadoop-datajoin/: .project
hadoop-tools/hadoop-distcp/: .project
hadoop-tools/hadoop-extras/: .project
hadoop-tools/hadoop-gridmix/: .project
hadoop-tools/hadoop-pipes/: .project
hadoop-tools/hadoop-rumen/: .project
hadoop-tools/hadoop-streaming/: .project
hadoop-tools/hadoop-tools-dist/: .project
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-api/src/main/proto/: yarn_protos.proto
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-site/: .project
(+59 files in other folders)
